--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+/*
+#252525 
+#1B1C1E
+You can add global styles to this file, and also import other style files */
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #252525;
+  color: #EEEEEE;
+  font-family: segoe UI;
+}
+
+a {
+  text-decoration: none;
+}
