--- a/src/app/components/small-card/small-card.component.css
+++ b/src/app/components/small-card/small-card.component.css
@@ -1,7 +1,6 @@
 .container__small-card {
-  border: 1px solid white;
   width: 700px;
-  margin-bottom: 15px;
+  margin-bottom: 16px;
 }
 
 .container__small-card-content {
@@ -11,7 +10,9 @@
 
 .small-card__photo > img {
 width: 300px;
+height: 200px;
 min-width: 300px;
+min-height: 200px;
 margin-right: 20px;
 }
 
@@ -22,5 +23,5 @@ margin-right: 20px;
 }
 
 .container__small-card__separator {
-  margin-top: 10px;
+  margin-top: 12px;
 }
