--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,18 +1,35 @@
-<header>
-  <app-menu-bar></app-menu-bar>
-</header>
 <app-menu-title></app-menu-title>
 
 <div class="container__articles">
-
   <div class="articles__main">
-    <app-big-card></app-big-card>
+    <app-big-card
+    id="1"
+      photoCover="https://cdn.pixabay.com/photo/2016/03/30/21/59/coffee-beans-1291656_640.jpg"
+      cardTitle="Café é um fruto?"
+      carDescription="O café tem um efeito diferente em cada indivíduo. Dependendo da quantidade de cafeína que eles consumiram, o café pode fazer muitas coisas. Pode causar um aumento no estado de alerta, energia e capacidade de concentração, mas também é simplesmente delicioso. O café é uma bebida amada por muitos. (Isso inclui a gente também!)Sobremesa delícia de uva com chocolate"
+    ></app-big-card>
   </div>
 
   <div class="articles__others">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-  </div>
+    <app-small-card
+      id="2"
+      photoCover="https://cdn.pixabay.com/photo/2014/12/11/02/56/coffee-563797_640.jpg"
+      cardDescription="Cafezinho puro"
+    >
+    </app-small-card>
 
+    <app-small-card
+      id="3"
+      photoCover="https://cdn.pixabay.com/photo/2016/11/29/04/58/coffee-1867429_640.jpg"
+      cardDescription="Café com leite"
+    >
+    </app-small-card>
+
+    <app-small-card
+      id="4"
+      photoCover="https://cdn.pixabay.com/photo/2016/08/09/13/21/coffee-1580595_640.jpg"
+      cardDescription="O caffè mocha (também chamado como mocaccino)"
+    >
+    </app-small-card>
+  </div>
 </div>
