--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,12 @@
 /*
-#252525 
-#1B1C1E
 You can add global styles to this file, and also import other style files */
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #252525;
-  color: #EEEEEE;
-  font-family: segoe UI;
+  background-color:  #FAF0CA;
+  color: #252525;
+  font-family: 'Inter', sans-serif;
 }
 
 a {
