--- a/src/app/components/menu-title/menu-title.component.css
+++ b/src/app/components/menu-title/menu-title.component.css
@@ -3,16 +3,15 @@
 }
 
 .container__menu-title > h1 {
-  margin: 15px 0;
-  font-size: 135px;
+  margin: 1rem 0;
+  font-size: 8rem;
   font-weight: bolder;
-  font-family: segoe UI;
   text-transform: uppercase;
+  letter-spacing: 0.5rem;
   display: flex;
   justify-content: center;
 }
 
 .container__menu-title > hr {
-  margin: 20px 0;
-
+  margin: 1.2rem 0;
 }
